--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.caic.dagger2demo"
+        applicationId "com.bccc.dagger2demo"
         minSdk 26
         targetSdk 31
         versionCode 1
