--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.caic.dagger2demo">
+    package="com.bccc.dagger2demo">
 
     <application
-        android:name=".MyApplication"
+        android:name="com.bccc.dagger2demo.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,10 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Dagger2demo">
         <activity
-            android:name=".SecActivity"
+            android:name="com.bccc.dagger2demo.SecActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.bccc.dagger2demo.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
